feat(custom-font): add fonts
 - Add google fonts and apply into tailwind config
 - replace hamburger icon for site title in header
 - Change site title to "CallMarx.dev"

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 language: "pt-BR"
 url: "https://callmarx.dev" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/" # the subpath of your site, e.g. /blog
-title: "CallMarx" # the name of your site, e.g. ACME Corp.
+title: "CallMarx.dev" # the name of your site, e.g. ACME Corp.
 name: "Eugenio Augusto Jimenes"
 markdown: kramdown
 highlighter: rouge
