--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cssnano": "^5.1.12",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
+    "postcss-nested": "^5.0.6",
     "tailwindcss": "^3.1.4"
   }
 }
