feat(archive): filter by tag
  - add jekyll-archives plugin
  - include it in _config.yml
  - move post listing to _includes/listed-post.html
  - create _layouts/archive.html
  - move all singles pages to a new folder, _pages/
  - create _pages/tag-archive.html
  - include folder _pages in tailwind config
  - Add jekyll-paginate, but it isn't configured yet

--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,20 @@ highlighter: rouge
 
 plugins:
   - jekyll-postcss
+  - jekyll-archives
 
 postcss:
   cache: false
+
+tag_archive:
+  type: jekyll-archives
+  path: /tags/
+jekyll-archives:
+  enabled:
+    - tags
+  layout: archive
+  permalinks:
+    tag: '/tags/:name/'
 
 defaults:
   - scope:
@@ -18,12 +29,9 @@ defaults:
       type: posts
     values:
       layout: post
-  - scope:
-      path: "categories"
-    values:
-      layout: category
-      permalink: /category/:basename/
 
+include:
+  - _pages
 exclude:
   - Gemfile
   - Gemfile.lock
