feat(migrate): add all other posts
  - Include all other posts from
    https://github.com/callmarx/callmarx.github.io
  - Adapt them for main image and other details
  - Replace 'include video' from old posts for gifs
  - Also migrate images and gifs
  - Improve listed-post.html

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ title: "CallMarx.dev" # the name of your site, e.g. ACME Corp.
 name: "Eugenio Augusto Jimenes"
 markdown: kramdown
 highlighter: rouge
+excerpt_separator: <!-- excerpt-end -->
 
 plugins:
   - jekyll-postcss
