--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ postcss:
 
 pagination:
   enabled: true
-  per_page: 5
+  per_page: 4
+  sort_reverse: true #for descending order by date
   permalink: "/page/:num/"
 
 autopages:
