--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@hotwired/turbo": "^7.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
