feat(trail-pagination): implement trail pagination
  - reference:
    https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#creating-pagination-trails

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ pagination:
   per_page: 4
   sort_reverse: true #for descending order by date
   permalink: "/page/:num/"
+  trail:
+    before: 2
+    after: 2
 
 autopages:
   enabled: true
