--- a/_config.yml
+++ b/_config.yml
@@ -52,11 +52,14 @@ defaults:
 include:
   - _pages
 exclude:
+  - .gitignore
+  - code_of_conduct.md
   - Gemfile
   - Gemfile.lock
+  - LICENSE
   - node_modules
-  - package.json
   - package-lock.json
-  - .gitignore
+  - package.json
   - postcss.config.js
+  - README.md
   - tailwind.config.js
