chore(config): add files in exclude option

--- a/_config.yml
+++ b/_config.yml
@@ -61,10 +61,12 @@ include:
   - _pages
 exclude:
   - .gitignore
+  - .rubocop.yml
   - code_of_conduct.md
   - Gemfile
   - Gemfile.lock
   - LICENSE
+  - netlify.toml
   - node_modules
   - package-lock.json
   - package.json
