--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ tagline: "Desenvolvedor senior, disléxico e esquerdopata convicto"
 description: "Blog/diário sobre minha relação de \"Credo, que delícia!\" com TI."
 url: "https://callmarx.dev"
 author: "Eugenio A. Jimenes"
-image: "/assets/images/eu.webp"
+main_image: "/assets/images/eu.webp"
 language: "pt-BR"
 baseurl: ""
 
