--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack --progress --config webpack.config.js && bundle exec jekyll build",
+    "start": "export NODE_ENV=development && export JEKYLL_ENV=development && bash -c \"./node_modules/.bin/webpack --watch --progress --color | tee -i >(bundle exec jekyll serve --livereload --incremental)\"",
+    "prod": "export NODE_ENV=production && export JEKYLL_ENV=production && npm run build"
+  },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
@@ -6,6 +12,14 @@
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
+    "stimulus": "^3.0.1",
     "tailwindcss": "^3.1.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
