build(src-folder): move jekyll to src folder
  - add clear script in package.json
  - add executables in ./bin/

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run prod"
-  publish = "_site"
+  command = "npm run build:prod"
+  publish = "src/_site"
 
 [build.environment]
   NODE_VERSION = "14"
