--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build:webpack": "webpack --progress --config webpack.config.js"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.1.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@hotwired/turbo": "^7.1.0",
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
-    "stimulus": "^3.0.1",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
