--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "clear": "bundle exec jekyll clean -s src -d src/_site",
     "develop:jekyll": "export JEKYLL_ENV=development && bundle exec jekyll serve -s src -d src/_site -b '' --draft --livereload --incremental --watch",
     "develop:webpack": "export NODE_ENV=development && webpack --mode development --watch --progress --color",
-    "build:prod": "export NODE_ENV=production && export JEKYLL_ENV=production && npm run build:webpack && npm run build:jekyll",
+    "develop:postcss": "export JEKYLL_ENV=development && postcss src/assets/css/main.css --output src/_site/assets/css/main.css --watch",
+    "build:prod": "export NODE_ENV=production && export JEKYLL_ENV=production && npm run build:postcss && npm run build:webpack && npm run build:jekyll",
     "build:jekyll": "bundle exec jekyll build -s src -d src/_site --verbose --trace",
-    "build:webpack": "webpack --progress --config webpack.config.js"
+    "build:webpack": "webpack --progress --config webpack.config.js",
+    "build:postcss": "postcss src/assets/css/main.css --output src/_site/assets/css/main.css"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
@@ -15,6 +17,7 @@
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.12",
     "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
     "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
     "tailwindcss": "^3.1.4"
