--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "build:webpack": "webpack --progress --config webpack.config.js"
   },
   "dependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo": "^7.1.0",
     "@tailwindcss/typography": "^0.5.2",
-    "tailwindcss": "^3.1.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -26,6 +23,7 @@
     "postcss-loader": "^7.0.1",
     "serialize-javascript": "^6.0.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
